Fix JMH benchmark