@@ -2,7 +2,6 @@ plugins {
     id 'com.github.ben-manes.versions' version '0.39.0'
     id 'net.minecraftforge.gradleutils' version '2.+'
     id 'de.jjohannes.extra-java-module-info' version '0.11'
-    id 'me.champeau.jmh' version '0.6.5'
     id 'maven-publish'
 }
 
@@ -15,49 +14,6 @@ allprojects {
     java {
         toolchain.languageVersion = JavaLanguageVersion.of(16)
         withSourcesJar()
-    }
-    
-    //compileJava {
-    //    sourceCompatibility = JavaVersion.VERSION_16
-    //    targetCompatibility = JavaVersion.VERSION_16
-    //}
-
-    test {
-        useJUnitPlatform()
-    }
-
-    configurations {
-        tWorkaround
-        testCompileOnly {
-            // for some reason, test-only project dependencies aren't registered properly due to an issue with the jmh plugin
-            // so we have our own extra configuration
-            // see https://github.com/melix/jmh-gradle-plugin/issues/216 for details
-            extendsFrom tWorkaround
-        }
-    }
-
-    eclipse {
-        project {
-            if (!project.name.startsWith("${rootProject.name}")) {
-                name = "${rootProject.name}-${project.name}"
-            }
-        }
-        classpath {
-            plusConfigurations << configurations.tWorkaround // fix handling of test-only dep
-            file.whenMerged { classpath ->
-                classpath.entries.each { entry ->
-                    if (entry instanceof org.gradle.plugins.ide.eclipse.model.Library
-                        || entry instanceof org.gradle.plugins.ide.eclipse.model.ProjectDependency) {
-                        entry.entryAttributes['module'] = true
-                    } else if (entry instanceof org.gradle.plugins.ide.eclipse.model.SourceFolder) {
-                        def extraReads = ['org.junit.jupiter.api', 'powermock.core', 'powermock.reflect', 'cpw.mods.modlauncher.testjars']
-                            .collect { "cpw.mods.modlauncher=$it" }
-                            .join(':')
-                        entry.entryAttributes['add-reads'] = extraReads
-                    }
-                }
-            }
-        }
     }
 }
 
@@ -86,6 +42,10 @@ ext.asmVersion = 9.2
 version = gradleutils.getTagOffsetVersion()
 logger.lifecycle('Version: ' + version)
 
+sourceSets {
+    jmh
+}
+
 dependencies {
     api("org.ow2.asm:asm:${asmVersion}")
     api("org.ow2.asm:asm-tree:${asmVersion}")
@@ -106,18 +66,19 @@ dependencies {
     testImplementation('org.powermock:powermock-reflect:2.0.+')
     testCompileOnly('org.jetbrains:annotations:21.0.1')
     
-    tWorkaround(project(':testjars'))
-    
-    jmhImplementation('org.powermock:powermock-core:2.0.+')
-    jmhImplementation("org.ow2.asm:asm:${asmVersion}")
-    jmhImplementation("org.ow2.asm:asm-tree:${asmVersion}")
-    jmhImplementation("org.ow2.asm:asm-commons:${asmVersion}")
-    jmh("org.ow2.asm:asm:${asmVersion}")
-    jmh('org.openjdk.jmh:jmh-core:1.32')
-    jmh('org.openjdk.jmh:jmh-generator-bytecode:1.31')
+    jmhImplementation sourceSets.main.output
+    jmhImplementation project(':testjars')
+    jmhImplementation('org.openjdk.jmh:jmh-core:1.34')
+    jmhImplementation('org.powermock:powermock-core:2.0.9')
+    jmhAnnotationProcessor('org.openjdk.jmh:jmh-generator-annprocess:1.34')
 }
 
+configurations.jmhImplementation.extendsFrom(configurations.implementation)
+
 extraJavaModuleInfo {
+    automaticModule('commons-math3-3.2.jar', 'commons.math')
+    automaticModule('jmh-core-1.34.jar', 'jmh.core')
+    automaticModule('jmh-generator-annprocess-1.34.jar', 'jmh.generator.annprocess')
     automaticModule('javassist-3.27.0-GA.jar', 'javassist')
     automaticModule('powermock-core-2.0.9.jar', 'powermock.core')
     automaticModule('powermock-reflect-2.0.9.jar', 'powermock.reflect')
@@ -126,6 +87,8 @@ extraJavaModuleInfo {
 
 test {
     dependsOn ':testjars:jar'
+    
+    useJUnitPlatform()
 
     def testjar = project(':testjars').jar.archiveFile.get().asFile
     systemProperty 'testJars.location', testjar
@@ -140,19 +103,36 @@ test {
     )
 }
 
-jmh {
-    includes = [ 'cpw.mods.modlauncher.benchmarks.TransformBenchmark' ]
-    benchmarkMode = ['avgt' ]
-    profilers = [ 'stack' ]
-    timeOnIteration = '3s'
-    warmup = '3s'
-    warmupIterations = 3
-    iterations = 3
-    fork = 3
-    timeUnit = 'us'
-}
+task jmh(type: JavaExec, dependsOn: jmhClasses) {
+    mainClass = 'org.openjdk.jmh.Main'
 
-tasks['jmh'].dependsOn(clean)
+    def results = file("${project.reportsDir}/jmh/result.json")
+    doFirst {
+        results.parentFile.mkdirs()
+
+        println(sourceSets.jmh.runtimeClasspath.asPath)
+        jvmArgs(
+                '--module-path', sourceSets.jmh.runtimeClasspath.asPath,
+                '--add-modules', 'ALL-MODULE-PATH',
+                '--add-opens', 'cpw.mods.modlauncher/cpw.mods.modlauncher=powermock.reflect',
+                '--add-opens', 'cpw.mods.modlauncher/cpw.mods.modlauncher=cpw.mods.modlauncher.benchmarks'
+        )
+    }
+
+    args = [
+            'cpw.mods.modlauncher.benchmarks.TransformBenchmark',
+            '-bm', 'avgt',
+            '-prof', 'stack',
+            '-r', '3s',
+            '-w', '3s',
+            '-wi', '3',
+            '-i', '3',
+            '-f', '3',
+            '-tu', 'us',
+            '-rf', 'json',
+            '-rff', results
+    ]
+}
 
 ext.sharedManifest = manifest {
     attributes(['Specification-Title': 'modlauncher',
